Fix file names overflowing in history tab;Disable links in listexport when an export is ongoing;Fix menu responsivity;Disable export button in search component when export is ongoing;Release 1.0.15

--- a/src/app/unit/updateunit.style.css
+++ b/src/app/unit/updateunit.style.css
@@ -86,6 +86,10 @@ div.hierarchy-container {
 .changelogattachment-cell {
   cursor: pointer;
   color: blue;
+  max-width: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .accumulated-changes-box {
   float: left;
